--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -185,6 +185,14 @@ config VECTORS_BASE
 	help
 	  The base address of exception vectors.
 
+config ARCH_HIBERNATION_POSSIBLE
+	bool
+	depends on !SMP
+	help
+	If the machine architecture supports suspend-to-disk
+	it should select this automatically for you.
+	Otherwise, say 'Y' at your own peril.
+
 config ARM_PATCH_PHYS_VIRT
 	bool "Patch physical to virtual translations at runtime" if EMBEDDED
 	default y
