--- a/arch/arm/mach-bcm2708/Kconfig
+++ b/arch/arm/mach-bcm2708/Kconfig
@@ -6,6 +6,7 @@ config MACH_BCM2708
 	select NEED_MACH_MEMORY_H
 	select NEED_MACH_IO_H
 	select CPU_V6
+	select ARCH_HIBERNATION_POSSIBLE
 	help
 	  Include support for the Broadcom(R) BCM2708 platform.
 
